Remove CoreX XSeries Folia boot blockers
Co-authored-by: Cursor <cursoragent@cursor.com>